--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/evmdb
-spring.datasource.username=root
-spring.datasource.password=Nechbet&001
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://192.168.0.30:3306/evm
+spring.datasource.username=cor
+spring.datasource.password=password123
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 logging.file.name=evmapp.log
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
