--- a/Dockerfile-EvmApp
+++ b/Dockerfile-EvmApp
@@ -2,4 +2,5 @@ FROM openjdk:19
 COPY . /opt
 WORKDIR /opt
 ENV TZ="Europe/Amsterdam"
-ENTRYPOINT ["java", "-jar", "./docker/evmApplication-0.0.1-SNAPSHOT.jar"]
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "./target/evmApplication-0.0.1-SNAPSHOT.jar"]
