--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://192.168.0.30:3306/evm
+spring.datasource.url=jdbc:mysql://localhost:3306/evm
 spring.datasource.username=cor
-spring.datasource.password=password123
-spring.datasource.platform=mysql
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=Password123
+spring.sql.init.platform=mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 logging.file.name=evmapp.log
 management.endpoints.web.exposure.include=*
