--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
       MYSQL_USER: cor
       MYSQL_PASSWORD: Password123
       MYSQL_DATABASE: evm
+      TZ: "Europe/Amsterdam"
     networks:
       evm-mysql-net:
   evmservice:
     container_name: evm-service
     environment:
+      - TZ=Europe/Amsterdam
       - spring.datasource.url=jdbc:mysql://mysqldb:3306/evm?allowPublicKeyRetrieval=true
     restart: on-failure
     build:
