--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId> org.junit.jupiter </groupId>
+			<artifactId> junit-jupiter-engine </artifactId>
+			<version> 5.3.1 </version>
+			<scope> junit- assertthat </scope>
+		</dependency>
 	</dependencies>
 
 	<build>
